# bonfire-backend

./: .env.demo  .gitignore  Cargo.toml  cookie.json  readme.md
migrations/: 20260418134023_create_user.sql  20260502075816_create_session.sql  20260528132321_channels.sql  20260619120000_create_banned_users.sql  20260619180000_create_key_bundles.sql
src/: admin.rs  auth.rs  auth_middlewear.rs  channel.rs  channels.rs  cookie.rs  crypto_manager.rs  keys.rs  login.rs  main.rs  message_crypto.rs  messages.rs  permissions.rs  register.rs  session.rs  user.rs
