[package]
name = "bonfire-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketioxide = "0.18.2"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
