[package]
name = "bonfire-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.13.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
socketioxide = { version = "0.18.3", features = ["state", "tracing"] }
sqlx = { version = "0.8.6", features = [
  "macros",
  "runtime-tokio-native-tls",
  "sqlite"
] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
